// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 3px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.c0:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c0:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c0:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c0.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c0.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c0.grouped:focus,
.c0.grouped:active,
.c0.grouped:hover {
  border-right-width: 1px;
}

.c0.grouped:focus + .grouped,
.c0.grouped:active + .grouped,
.c0.grouped:hover + .grouped {
  border-left-width: 0;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  color: rgba(36,41,46,0.4);
  background-color: #eff3f6;
  background-image: none;
  border-color: rgba(27,31,35,0.20);
  box-shadow: none;
  cursor: default;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonDanger renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 3px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #cb2431;
  background-color: #fafbfc;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
}

.c0:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c0:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c0:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c0.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c0.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c0.grouped:focus,
.c0.grouped:active,
.c0.grouped:hover {
  border-right-width: 1px;
}

.c0.grouped:focus + .grouped,
.c0.grouped:active + .grouped,
.c0.grouped:hover + .grouped {
  border-left-width: 0;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  color: rgba(36,41,46,0.4);
  background-color: #eff3f6;
  background-image: none;
  border-color: rgba(27,31,35,0.20);
  box-shadow: none;
  cursor: default;
}

.c0:hover {
  color: #fff;
  background-color: #cb2431;
  background-image: linear-gradient( -180deg,rgb(222,68,80) 0%,#cb2431 90% );
  border-color: rgba(27,31,35,0.5);
}

.c0:focus {
  box-shadow: rgba(203,36,49,0.4) 0px 0px 0px 0.2em;
}

.c0:active {
  color: #fff;
  background-color: rgb(181,32,44);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.5);
}

.c0:selected {
  color: #fff;
  background-color: rgb(181,32,44);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.5);
}

.c0:disabled {
  color: rgba(203,36,49,0.4);
  background-color: #eff3f6;
  background-image: none;
  border-color: rgba(27,31,35,0.20);
  box-shadow: none;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonOutline renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 3px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: rgb(3,102,214);
  background-color: rgb(255,255,255);
  background-image: none;
}

.c0:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c0:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c0:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c0.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c0.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c0.grouped:focus,
.c0.grouped:active,
.c0.grouped:hover {
  border-right-width: 1px;
}

.c0.grouped:focus + .grouped,
.c0.grouped:active + .grouped,
.c0.grouped:hover + .grouped {
  border-left-width: 0;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  color: rgba(36,41,46,0.4);
  background-color: #eff3f6;
  background-image: none;
  border-color: rgba(27,31,35,0.20);
  box-shadow: none;
  cursor: default;
}

.c0:hover {
  color: rgb(255,255,255);
  background-color: rgb(3,102,214);
  background-image: none;
  border-color: rgb(3,102,214);
}

.c0:active {
  color: rgb(255,255,255);
  background-color: rgb(3,102,214);
  background-image: none;
  border-color: rgb(3,102,214);
}

.c0:focus {
  box-shadow: rgba(3,102,214,0.4) 0px 0px 0px 0.2em;
  border-color: rgb(3,102,214);
}

.c0:disabled {
  color: rgba(27,31,35,0.3);
  background-color: #fff;
  border-color: rgba(27,31,35,0.15);
  box-shadow: none;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonPrimary renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 3px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: rgb(255,255,255);
  background-color: rgb(40,167,69);
  background-image: linear-gradient( -180deg,rgb(52,208,88) 0%,rgb(40,167,69) 90% );
}

.c0:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c0:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c0:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c0.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c0.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c0.grouped:focus,
.c0.grouped:active,
.c0.grouped:hover {
  border-right-width: 1px;
}

.c0.grouped:focus + .grouped,
.c0.grouped:active + .grouped,
.c0.grouped:hover + .grouped {
  border-left-width: 0;
}

.c0:focus,
.c0:active {
  z-index: 1;
}

.c0:disabled {
  color: rgba(36,41,46,0.4);
  background-color: #eff3f6;
  background-image: none;
  border-color: rgba(27,31,35,0.20);
  box-shadow: none;
  cursor: default;
}

.c0:hover {
  background-color: rgb(38,159,66);
  background-image: linear-gradient( -180deg,rgb(47,203,83) 0%,rgb(38,159,66) 90% );
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.5);
}

.c0:active {
  background-color: rgb(39,159,67);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.5);
}

.c0:focus {
  box-shadow: rgba(52,208,88,0.4) 0px 0px 0px 0.2em;
}

.c0:disabled {
  color: rgba(255,255,255,.75);
  background-color: #94d3a2;
  background-image: none;
  border-color: rgba(27,31,35,0.2);
  box-shadow: none;
}

<button
  className="c0"
  disabled={true}
/>
`;
